<resources>
    <string name="app_name">BaseProject</string>

    //网络提示
    <string name="data_exception">数据异常，请稍后重试</string>
    <string name="net_exception">网络异常，请稍后重试</string>

    //对话框
    <string name="dialog_title">温馨提示</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_sure">确定</string>

    //登录
    <string name="pls_input_name">请输入用户名</string>
    <string name="pls_input_password">请输入密码</string>
    <string name="login">登录</string>

    //进度条提示语
    <string name="loading">正在加载...</string>


</resources>
