<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/name"
            android:layout_gravity="center"
            android:hint="@string/pls_input_name"
            android:layout_width="150dp"
            android:layout_height="50dp" />

        <EditText
            android:id="@+id/password"
            android:layout_gravity="center"
            android:hint="@string/pls_input_password"
            android:layout_width="150dp"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/login"
            android:onClick="onClick"
            android:text="@string/login"
            android:layout_gravity="center"
            android:layout_width="100dp"
            android:layout_height="50dp" />

    </LinearLayout>
</layout>
