<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_dialog_bg"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:padding="8dp"
        android:maxLines="1"
        android:text="@string/dialog_title"
        android:textColor="@color/black"
        android:textSize="@dimen/NormalTextSize" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/dark_grey" />


    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center_vertical"
        android:layout_gravity="center_vertical"
        android:minHeight="35dp"
        android:textColor="@color/black"
        android:textSize="@dimen/NormalTextSize" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/dark_grey" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/cancle"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/btn_cancel"
            android:background="@android:color/transparent"
            android:textColor="@color/btn_red"
            android:textSize="@dimen/NormalTextSize" />

        <View
            android:id="@+id/space"
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/dark_grey" />

        <Button
            android:id="@+id/sure"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/btn_sure"
            android:background="@android:color/transparent"
            android:textColor="@color/btn_red"
            android:textSize="@dimen/NormalTextSize" />
    </LinearLayout>

</LinearLayout>
